Had a lot of bugs in the dashboard page thus far that were mostly from missing tags. Figured out better JS and jquery also

--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -25,6 +25,13 @@
 {% endmacro %}
 
 
+{% macro render_checkbox_field(field) %}
+<div class="form-check">
+  <label class="form-check-label">
+    {{ field(type='checkbox', **kwargs) }} {{ field.label }}
+  </label>
+</div>
+{%- endmacro %}
 
 <!-- http://bear-z.com/python/render-bootstrap-3-forms-with-wtforms-and-jinja/
  -->
