--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -11,15 +11,16 @@
 <div class="row well-spaced">
     <div class="col-md-4 col-md-offset-4">
         <div class = "row round_hidden_div form-group" style="padding-top: 2em">
-            {% from "_formhelpers.html" import render_field %}
+            {% from "_formhelpers.html" import render_field, render_checkbox_field %}
             <form name="login-form" id="login-form"class="form form-horizontal" method="post" role="form">
                 <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                 <dl>
-                    {{ render_field(login_form.email) }}<br>
-                    {{ render_field(login_form.password) }}<br>
-                    {{ render_field(login_form.remember_me)  }}<br>
+                    {{ render_field(login_form.email, cols="40", rows="1") }}<br>
+                    {{ render_field(login_form.password, cols="40", rows="1") }}<br>
+                    {{ render_checkbox_field(login_form.remember_me)  }}<br>
+                    <input name='submit1' type=submit class="btn" value='submit'>  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#resetpassword">Reset Password</button>
                 </dl>
-                <p><input name='submit1' type=submit class="btn" value='submit'>  <button type="button" class="btn btn-info" data-toggle="modal" data-target="#resetpassword">Reset Password</button>
+
             </form>
         </div>
     </div>
@@ -36,11 +37,11 @@
             </div>
             <div class="modal-body">
                 <div class = "row round_hidden_div form-group" style="padding-top: 2em">
-                        {% from "_formhelpers.html" import render_inline_field %}
+                        {% from "_formhelpers.html" import render_field %}
                         <form action="{{ url_for('auth.process_reset')  }}" name="reset_password_request_form" id="reset_password_request_form" class="form form-horizontal" method="post" role="form">
                             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                            {{ render_inline_field(reset_password_request_form.email) }}
-                            <input name='a-submit2' type=submit class="btn" value="submit">
+                            {{ render_field(reset_password_request_form.email, cols="40", rows="1") }}
+                            <input type="submit" class="btn btn-sm btn-default" value="Submit">
                         </form>
                     </div>
                 </div>     
